# CrashDummy

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  build_debs.sh.in  configure.ac  crashdummy.spec.in
debian/: Makefile.am  changelog.src  control.src  copyright  postinst  postrm  prerm  rules
debian/source/: Makefile.am
helpers/: Makefile.am
src/: Makefile.am  crashdummy.c  crashdummy.h
systemd/: Makefile.am  crashdummy.service.in  daemon-reload.sh
